--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Chowdown
 email: your-email@domain.com
 description: The plain text recipe database for hackers
-baseurl: ""
+baseurl: "https://timo-reymann.github.io/chowdown/"
 language: "de"
 lang_direction: "ltr"
 color: "#007FFF"
