--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Chowdown (with recipes from Timo)
 email: no-reply@timo-reymann.de
 description: The plain text recipe database for hackers (with my recipes)
-baseurl: "https://timo-reymann.github.io/recipes"
+# baseurl: "https://timo-reymann.github.io/recipes"
 language: "de"
 lang_direction: "ltr"
 color: "#D65108"
