chore: Add en translations

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,16 @@ collections:
 exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md']
 
 translation:
+  en:
+      components: "Components"
+      ingredients: "Ingredients"
+      directions: "Directions"
+      category: "Category"
+      nutritional_information: "Nutritional Information"
+      component_based: 'This is a <strong class="blue">component-based recipe</strong>.'
+      search: "Search"
+      blog: "Blog"
+      subscribe: "Subscribe"
   de:
     components: "Komponenten"
     ingredients: "Zutaten"
